+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.5.2c1?
=============================

*Release date: XX-XXX-XXXX*

Library
-------

- SF 1668596/1720897: distutils now copies data files
  even if package_dir is empty.

- Fix bug in marshal where bad data would cause a segfault due to
  lack of an infinite recursion check.

- HTML-escape the plain traceback in cgitb's HTML output, to prevent
  the traceback inadvertently or maliciously closing the comment and
  injecting HTML into the error page.

- Bug #1290505: Properly clear time.strptime's locale cache when the locale
  changes between calls.  Backport of r54646 and r54647.

- Bug #1706381: Specifying the SWIG option "-c++" in the setup.py file
  (as opposed to the command line) will now write file names ending in
  ".cpp" too.

- Patch #1695229: Fix a regression with tarfile.open() and a missing name
  argument.

- tarfile.py: Fix directory names to have only one trailing slash.

- Fix test_pty.py to not hang on OS X (and theoretically other *nixes) when
  run in verbose mode.


Extension Modules
-----------------

- Bug #1721309: prevent bsddb module from freeing random memory.

- Bug #1726026: Correct the field names of WIN32_FIND_DATAA and
  WIN32_FIND_DATAW structures in the ctypes.wintypes module.

Documentation
-------------

- Bug #1569057: Document that calling file.next() on a file open for writing
  has undefined behaviour.  Backport of r54712.


What's New in Python 2.5.1?
=============================

*Release date: 18-APR-2007*

Core and builtins
-----------------

- Bug #1722485: remove docstrings again when running with -OO.

- Revert SF #1615701: dict.update() does *not* call __getitem__() or keys()
  if subclassed.  This is to remain consistent with 2.5.
  Also revert revision 53667 with made a similar change to set.update().


What's New in Python 2.5.1c1?
=============================
